qt-restricted-extras/qscintilla/gen_qscilexer.nim


proc fcQsciLexer_new(): ptr cQsciLexer {.importc: "QsciLexer_new".}
proc fcQsciLexer_new2(parent: pointer): ptr cQsciLexer {.importc: "QsciLexer_new2".}
proc fcQsciLexer_metaObject(self: pointer, ): pointer {.importc: "QsciLexer_metaObject".}
proc fcQsciLexer_metacast(self: pointer, param1: cstring): pointer {.importc: "QsciLexer_metacast".}
proc fcQsciLexer_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QsciLexer_metacall".}
proc fcQsciLexer_tr(s: cstring): struct_miqt_string {.importc: "QsciLexer_tr".}
proc fcQsciLexer_trUtf8(s: cstring): struct_miqt_string {.importc: "QsciLexer_trUtf8".}
proc fcQsciLexer_language(self: pointer, ): cstring {.importc: "QsciLexer_language".}
proc fcQsciLexer_lexer(self: pointer, ): cstring {.importc: "QsciLexer_lexer".}
proc fcQsciLexer_lexerId(self: pointer, ): cint {.importc: "QsciLexer_lexerId".}
proc fcQsciLexer_apis(self: pointer, ): pointer {.importc: "QsciLexer_apis".}
proc fcQsciLexer_autoCompletionFillups(self: pointer, ): cstring {.importc: "QsciLexer_autoCompletionFillups".}
proc fcQsciLexer_autoCompletionWordSeparators(self: pointer, ): struct_miqt_array {.importc: "QsciLexer_autoCompletionWordSeparators".}
proc fcQsciLexer_autoIndentStyle(self: pointer, ): cint {.importc: "QsciLexer_autoIndentStyle".}
proc fcQsciLexer_blockEnd(self: pointer, style: ptr cint): cstring {.importc: "QsciLexer_blockEnd".}
proc fcQsciLexer_blockLookback(self: pointer, ): cint {.importc: "QsciLexer_blockLookback".}
proc fcQsciLexer_blockStart(self: pointer, style: ptr cint): cstring {.importc: "QsciLexer_blockStart".}
proc fcQsciLexer_blockStartKeyword(self: pointer, style: ptr cint): cstring {.importc: "QsciLexer_blockStartKeyword".}
proc fcQsciLexer_braceStyle(self: pointer, ): cint {.importc: "QsciLexer_braceStyle".}
proc fcQsciLexer_caseSensitive(self: pointer, ): bool {.importc: "QsciLexer_caseSensitive".}
proc fcQsciLexer_color(self: pointer, style: cint): pointer {.importc: "QsciLexer_color".}
proc fcQsciLexer_eolFill(self: pointer, style: cint): bool {.importc: "QsciLexer_eolFill".}
proc fcQsciLexer_font(self: pointer, style: cint): pointer {.importc: "QsciLexer_font".}
proc fcQsciLexer_indentationGuideView(self: pointer, ): cint {.importc: "QsciLexer_indentationGuideView".}
proc fcQsciLexer_keywords(self: pointer, set: cint): cstring {.importc: "QsciLexer_keywords".}
proc fcQsciLexer_defaultStyle(self: pointer, ): cint {.importc: "QsciLexer_defaultStyle".}
proc fcQsciLexer_description(self: pointer, style: cint): struct_miqt_string {.importc: "QsciLexer_description".}
proc fcQsciLexer_paper(self: pointer, style: cint): pointer {.importc: "QsciLexer_paper".}
proc fcQsciLexer_defaultColor(self: pointer, ): pointer {.importc: "QsciLexer_defaultColor".}
proc fcQsciLexer_defaultColorWithStyle(self: pointer, style: cint): pointer {.importc: "QsciLexer_defaultColorWithStyle".}
proc fcQsciLexer_defaultEolFill(self: pointer, style: cint): bool {.importc: "QsciLexer_defaultEolFill".}
proc fcQsciLexer_defaultFont(self: pointer, ): pointer {.importc: "QsciLexer_defaultFont".}
proc fcQsciLexer_defaultFontWithStyle(self: pointer, style: cint): pointer {.importc: "QsciLexer_defaultFontWithStyle".}
proc fcQsciLexer_defaultPaper(self: pointer, ): pointer {.importc: "QsciLexer_defaultPaper".}
proc fcQsciLexer_defaultPaperWithStyle(self: pointer, style: cint): pointer {.importc: "QsciLexer_defaultPaperWithStyle".}
proc fcQsciLexer_editor(self: pointer, ): pointer {.importc: "QsciLexer_editor".}
proc fcQsciLexer_setAPIs(self: pointer, apis: pointer): void {.importc: "QsciLexer_setAPIs".}
proc fcQsciLexer_setDefaultColor(self: pointer, c: pointer): void {.importc: "QsciLexer_setDefaultColor".}
proc fcQsciLexer_setDefaultFont(self: pointer, f: pointer): void {.importc: "QsciLexer_setDefaultFont".}
proc fcQsciLexer_setDefaultPaper(self: pointer, c: pointer): void {.importc: "QsciLexer_setDefaultPaper".}
proc fcQsciLexer_setEditor(self: pointer, editor: pointer): void {.importc: "QsciLexer_setEditor".}
proc fcQsciLexer_readSettings(self: pointer, qs: pointer): bool {.importc: "QsciLexer_readSettings".}
proc fcQsciLexer_refreshProperties(self: pointer, ): void {.importc: "QsciLexer_refreshProperties".}
proc fcQsciLexer_styleBitsNeeded(self: pointer, ): cint {.importc: "QsciLexer_styleBitsNeeded".}
proc fcQsciLexer_wordCharacters(self: pointer, ): cstring {.importc: "QsciLexer_wordCharacters".}
proc fcQsciLexer_writeSettings(self: pointer, qs: pointer): bool {.importc: "QsciLexer_writeSettings".}
proc fcQsciLexer_setAutoIndentStyle(self: pointer, autoindentstyle: cint): void {.importc: "QsciLexer_setAutoIndentStyle".}
proc fcQsciLexer_setColor(self: pointer, c: pointer, style: cint): void {.importc: "QsciLexer_setColor".}
proc fcQsciLexer_setEolFill(self: pointer, eoffill: bool, style: cint): void {.importc: "QsciLexer_setEolFill".}
proc fcQsciLexer_setFont(self: pointer, f: pointer, style: cint): void {.importc: "QsciLexer_setFont".}
proc fcQsciLexer_setPaper(self: pointer, c: pointer, style: cint): void {.importc: "QsciLexer_setPaper".}
proc fcQsciLexer_colorChanged(self: pointer, c: pointer, style: cint): void {.importc: "QsciLexer_colorChanged".}
proc fQsciLexer_connect_colorChanged(self: pointer, slot: int) {.importc: "QsciLexer_connect_colorChanged".}
proc fcQsciLexer_eolFillChanged(self: pointer, eolfilled: bool, style: cint): void {.importc: "QsciLexer_eolFillChanged".}
proc fQsciLexer_connect_eolFillChanged(self: pointer, slot: int) {.importc: "QsciLexer_connect_eolFillChanged".}
proc fcQsciLexer_fontChanged(self: pointer, f: pointer, style: cint): void {.importc: "QsciLexer_fontChanged".}
proc fQsciLexer_connect_fontChanged(self: pointer, slot: int) {.importc: "QsciLexer_connect_fontChanged".}
proc fcQsciLexer_paperChanged(self: pointer, c: pointer, style: cint): void {.importc: "QsciLexer_paperChanged".}
proc fQsciLexer_connect_paperChanged(self: pointer, slot: int) {.importc: "QsciLexer_connect_paperChanged".}
proc fcQsciLexer_propertyChanged(self: pointer, prop: cstring, val: cstring): void {.importc: "QsciLexer_propertyChanged".}
proc fQsciLexer_connect_propertyChanged(self: pointer, slot: int) {.importc: "QsciLexer_connect_propertyChanged".}
proc fcQsciLexer_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QsciLexer_tr2".}
proc fcQsciLexer_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QsciLexer_tr3".}
proc fcQsciLexer_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QsciLexer_trUtf82".}
proc fcQsciLexer_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QsciLexer_trUtf83".}
proc fcQsciLexer_readSettings2(self: pointer, qs: pointer, prefix: cstring): bool {.importc: "QsciLexer_readSettings2".}
proc fcQsciLexer_writeSettings2(self: pointer, qs: pointer, prefix: cstring): bool {.importc: "QsciLexer_writeSettings2".}
proc fQsciLexer_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QsciLexer_virtualbase_metaObject".}
proc fcQsciLexer_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_metaObject".}
proc fQsciLexer_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QsciLexer_virtualbase_metacast".}
proc fcQsciLexer_override_virtual_metacast(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_metacast".}
proc fQsciLexer_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QsciLexer_virtualbase_metacall".}
proc fcQsciLexer_override_virtual_metacall(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_metacall".}
proc fcQsciLexer_override_virtual_language(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_language".}
proc fQsciLexer_virtualbase_lexer(self: pointer, ): cstring{.importc: "QsciLexer_virtualbase_lexer".}
proc fcQsciLexer_override_virtual_lexer(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_lexer".}
proc fQsciLexer_virtualbase_lexerId(self: pointer, ): cint{.importc: "QsciLexer_virtualbase_lexerId".}
proc fcQsciLexer_override_virtual_lexerId(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_lexerId".}
proc fQsciLexer_virtualbase_autoCompletionFillups(self: pointer, ): cstring{.importc: "QsciLexer_virtualbase_autoCompletionFillups".}
proc fcQsciLexer_override_virtual_autoCompletionFillups(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_autoCompletionFillups".}
proc fQsciLexer_virtualbase_autoCompletionWordSeparators(self: pointer, ): struct_miqt_array{.importc: "QsciLexer_virtualbase_autoCompletionWordSeparators".}
proc fcQsciLexer_override_virtual_autoCompletionWordSeparators(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_autoCompletionWordSeparators".}
proc fQsciLexer_virtualbase_blockEnd(self: pointer, style: ptr cint): cstring{.importc: "QsciLexer_virtualbase_blockEnd".}
proc fcQsciLexer_override_virtual_blockEnd(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_blockEnd".}
proc fQsciLexer_virtualbase_blockLookback(self: pointer, ): cint{.importc: "QsciLexer_virtualbase_blockLookback".}
proc fcQsciLexer_override_virtual_blockLookback(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_blockLookback".}
proc fQsciLexer_virtualbase_blockStart(self: pointer, style: ptr cint): cstring{.importc: "QsciLexer_virtualbase_blockStart".}
proc fcQsciLexer_override_virtual_blockStart(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_blockStart".}
proc fQsciLexer_virtualbase_blockStartKeyword(self: pointer, style: ptr cint): cstring{.importc: "QsciLexer_virtualbase_blockStartKeyword".}
proc fcQsciLexer_override_virtual_blockStartKeyword(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_blockStartKeyword".}
proc fQsciLexer_virtualbase_braceStyle(self: pointer, ): cint{.importc: "QsciLexer_virtualbase_braceStyle".}
proc fcQsciLexer_override_virtual_braceStyle(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_braceStyle".}
proc fQsciLexer_virtualbase_caseSensitive(self: pointer, ): bool{.importc: "QsciLexer_virtualbase_caseSensitive".}
proc fcQsciLexer_override_virtual_caseSensitive(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_caseSensitive".}
proc fQsciLexer_virtualbase_color(self: pointer, style: cint): pointer{.importc: "QsciLexer_virtualbase_color".}
proc fcQsciLexer_override_virtual_color(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_color".}
proc fQsciLexer_virtualbase_eolFill(self: pointer, style: cint): bool{.importc: "QsciLexer_virtualbase_eolFill".}
proc fcQsciLexer_override_virtual_eolFill(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_eolFill".}
proc fQsciLexer_virtualbase_font(self: pointer, style: cint): pointer{.importc: "QsciLexer_virtualbase_font".}
proc fcQsciLexer_override_virtual_font(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_font".}
proc fQsciLexer_virtualbase_indentationGuideView(self: pointer, ): cint{.importc: "QsciLexer_virtualbase_indentationGuideView".}
proc fcQsciLexer_override_virtual_indentationGuideView(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_indentationGuideView".}
proc fQsciLexer_virtualbase_keywords(self: pointer, set: cint): cstring{.importc: "QsciLexer_virtualbase_keywords".}
proc fcQsciLexer_override_virtual_keywords(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_keywords".}
proc fQsciLexer_virtualbase_defaultStyle(self: pointer, ): cint{.importc: "QsciLexer_virtualbase_defaultStyle".}
proc fcQsciLexer_override_virtual_defaultStyle(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_defaultStyle".}
proc fcQsciLexer_override_virtual_description(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_description".}
proc fQsciLexer_virtualbase_paper(self: pointer, style: cint): pointer{.importc: "QsciLexer_virtualbase_paper".}
